--- a/index.html
+++ b/index.html
@@ -13,17 +13,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="test6.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="row no-gutters wrap">
         <div class="col-12 cont">
-            <img src="images/interior/AboutUs.jpg" class="img">
-            <img src="images/interior/ContactUs.jpg" class="img">
-            <img src="images/interior/FAQs.jpg" class="img">
-            <img src="images/interior/apartments.jpg" class="img">
+            <div id="carouselExampleControls" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-touch="true">
+                        <img src="images/interior/AboutUs.jpg" class="d-block w-100 img" alt="...">
+                    </div>
+                    <div class="carousel-item" data-touch="true">
+                        <img src="images/interior/ContactUs.jpg" class="d-block w-100 img" alt="...">
+                    </div>
+                    <div class="carousel-item" data-touch="true">
+                        <img src="images/interior/FAQs.jpg" class="d-block w-100 img" alt="...">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <script>
+        $('.carousel').carousel({
+            interval: false,
+            touch: true
+        })
+    </script>
 </body>
 
 </html>
