--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="row no-gutters wrap">
-<!--         <div class="col-12 cont">
+        <div class="col-12 cont">
             <div id="carouselExampleControls" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-touch="true">
@@ -45,61 +45,16 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-        </div> -->
-        <div class="swiper-container">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="images/interior/ContactUs.jpg" class="img"></div>
-                <div class="swiper-slide"><iframe src="https://www.youtube.com/embed/p15xzjzR9j0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <div class="swiper-slide"><img src="images/interior/FAQs.jpg" class="img"></div>
-            </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-            <!-- If we need scrollbar -->
-            <!-- <div class="swiper-scrollbar"></div> -->
         </div>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
-        // $('.carousel').carousel({
-        //     interval: false,
-        //     touch: true
-        // })
-        var mySwiper = new Swiper('.swiper-container', {
-            // Optional parameters
-            direction: 'horizontal',
-            loop: true,
-
-            // If we need pagination
-            pagination: {
-                el: '.swiper-pagination',
-            },
-
-            // Navigation arrows
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-
-            // And if we need scrollbar
-            scrollbar: {
-                el: '.swiper-scrollbar',
-            },
-        })
-    </script>
-<!--     <script>
         $('.carousel').carousel({
             interval: false,
             touch: true
         })
-    </script> -->
+        
 </body>
 
 </html>
