--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <img src="images/interior/AboutUs.jpg" class="d-block w-100 img" alt="...">
                     </div>
                     <div class="carousel-item" data-touch="true">
-                        <img src="images/interior/ContactUs.jpg" class="d-block w-100 img" alt="...">
+<!--                         <img src="images/interior/ContactUs.jpg" class="d-block w-100 img" alt="..."> -->
                         <iframe src="https://www.youtube.com/embed/p15xzjzR9j0" width="100%" class="embed-responsive-item img" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="carousel-item" data-touch="true">
